# agentops_mcp_server

./: .coverage  .gitignore  .rules  Makefile  README-jp.md  README.md  agentops_mcp_server.rb  coverage.xml  plan.txt  pyproject.toml  revise_plan.md  zed-agentops-init.sh
.agent/: handoff.md  session-log.jsonl
.agent.backup-pre-clean-baseline/: errors.jsonl  handoff.json  tx_event_log.jsonl  tx_state.json
.zed/: tasks.json
.zed/scripts/: verify  verify-release
docs/: draft.md  draft_0.4.13.md  draft_0.5.0.md  draft_0.5.3.md  draft_0.5.5.md  draft_0.6.0.md  plan.md  rules_long  rules_short
docs/old/: draft.md  draft_0.4.12.md  draft_0.5.1.md  draft_0.5.2.md  draft_0.5.4.md
docs/v0.1.0/: ticket_T-002_removal_candidates.md  ticket_T-011_replay_state_input.md
docs/v0.1.1/: tickets.json
docs/v0.2.0/: enhance_rules.md  implementation_plan.md  ticket-p2-t08.json
docs/v0.2.1/: ticket-p1-t01.json  tickets_list.json
docs/v0.2.2/: ticket-p1-t01.json  tickets_list.json
docs/v0.2.3/: ticket-p1-t01.json  ticket-p1-t02.json  ticket-p1-t03.json  tickets_list.json
docs/v0.3.0/: p1-t03-verification.md  plan.md  ticket-p1-t01.json  ticket-p1-t02.json  ticket-p1-t03.json
docs/v0.3.1/: p1-t03-verification.md  plan.md  ticket-p1-t01.json  ticket-p1-t02.json  ticket-p1-t03.json  ticket-p1-t04.json  tickets_list.json
docs/v0.4.0/: p1-t01-event-taxonomy.md  p1-t01-lifecycle-invariants.md  p1-t1.json  p1-t2.json  p1-t3.json  p2-t01-rebuild-engine.md  p2-t01-resume-selection.md  p2-t01-runtime-redesign.md  p2-t01-writer-pipeline.md  p2-t1.json  p2-t2.json  p2-t3.json  p2-t4.json  p3-t01-interruption-matrix.md  p3-t01-test-strategy.md  p3-t01-verification-gates.md  p3-t1.json  p3-t2.json  p3-t3.json  p3-t4.json  p3-t5.json  p3-t6.json  p3-t7.json  p3-t8.json  p4-t1.json  p4-t2.json  p4-t3.json  p4-t4.json  p4-t5.json  p5-t1.json  p5-t2.json  p5-t3.json  p5-t4.json  p5-t5.json  p6-t1.json  p7-t1.json  plan.md  ticket-p1-t01.json  ticket-p2-t01.json  ticket-p3-t01.json  (+1 more)
docs/v0.4.1/: p1-t1.json  p1-t2.json  p3-t1.json  p4-t1.json  plan.md
docs/v0.4.10/: p1-t02.json  p3-t04.json  plan.md  tickets_list.json
docs/v0.4.11/: p1-t01.json  p2-t02.json  p2-t03.json  p3-t04.json  plan.md  tickets_list.json
docs/v0.4.12/: p2-t02.json  p2-t03.json  p2-t04.json  p3-t04.json  p3-t05.json  tickets_list.json
docs/v0.4.13/: p1-t01.json  p2-t02.json  p2-t03.json  p3-t04.json  p4-t05.json  tickets_list.json
docs/v0.4.2/: p1-t1.json  p2-t1.json  p2-t3.json  p4-t1.json  plan.md  tickets_list.json
docs/v0.4.3/: p1-t1.json  p2-t1.json  p3-t1.json  p3-t2.json  p4-t1.json  p4-t2.json  plan.md  tickets_list.json
docs/v0.4.4/: p1-t1.json  p1-t2.json  p2-t2.json  p2-t3.json  p3-t2.json  p4-t1.json  p4-t2.json
docs/v0.4.5/: p1-t1.json  p1-t2.json  p2-t1.json  p2-t2.json  p2-t3.json  p2-t4.json  p3-t1.json  p3-t2.json  p4-t1.json  p4-t2.json  p4-t3.json  plan.md  tickets_list.json
docs/v0.4.6/: p1-t2.json  p2-t1.json  p2-t4.json  p3-t3.json  p4-t2.json  plan.md
docs/v0.4.8/: p1-t01.json  p2-t02.json  p2-t03.json  p3-t04.json  plan.md  tickets_list.json
docs/v0.4.9/: p1-t1.json  tickets_list.json
docs/v0.5.0/: plan.md  (+10 more)
tests/: conftest.py  test_commit_flow.py  test_commit_manager.py  test_git_repo.py  test_init.py  test_json_rpc_server.py  test_main.py  test_main_wrappers.py  test_ops_tools.py  test_persistence.py  test_release_coverage.py  test_repo_context.py  test_repo_tools.py  test_state_rebuilder.py  test_state_store.py  test_test_suggestions.py  test_tool_registry.py  test_tool_router.py  test_verify_runner.py  test_workflow_response.py
v0.1.0/: ticket_T-001_inventory.md  ticket_T-006_storage_paths.md  ticket_T-007_event_schema.md  tickets.json
v0.1.1/: ticket_T-001_update_spec.md  ticket_T-006_update_flow_verification.md  ticket_T-007_auto_snapshot_hook.md  tickets.json
v0.1.4/: tickets.json
v0.1.5/: add_cov_tickets.json  tickets.json
v0.2.0/: implementation_plan.md  ticket-p1-t01.json  ticket-p1-t02.json  ticket-p1-t04.json  ticket-p2-t05.json  ticket-p2-t06.json  ticket-p2-t07.json  tickets_list.json
(+195 files in other folders)
