[project]
name = "agentops-mcp-server"
authors = [
    {name = "Rio Fujita", email = "rifujita@microsoft.com"},
]
version = "0.1.4"
license = {file = "LICENSE"}
description = "Simple MCP server for AgentOps with Zed"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
  "pytest-cov>=4",
]

[project.urls]
Homepage = "https://github.com/rioriost/homebrew-agentops_mcp_server"
Issues = "https://github.com/rioriost/homebrew-agentops_mcp_server/issues"

[project.scripts]
agentops_mcp_server = "agentops_mcp_server.main:main"
zed-agentops-init = "agentops_mcp_server.init:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
  "release: coverage-only tests (excluded from verify)",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentops_mcp_server"]
include = ["src/agentops_mcp_server/zed-agentops-init.sh"]

[tool.hatch.build.targets.sdist]
include = [
  "src/agentops_mcp_server/*.py",
  "README.md",
  "README-jp.md",
  "LICENSE",
  "src/agentops_mcp_server/zed-agentops-init.sh"
]
exclude = [
  "agentops_mcp_server.rb",
  "uv.lock",
  "dist/.DS_Store",
  ".envrc",
]
