[project]
name = "agentops-mcp-server"
version = "0.5.3"
description = "Simple MCP server for AgentOps with Zed"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
  { name = "Rio Fujita", email = "rifujita@microsoft.com" },
]
dependencies = []

[tool.uv.build-backend]
module-root = "src"
source-include = [
  "src/agentops_mcp_server/zed-agentops-init.sh",
  "src/agentops_mcp_server/rules_template.txt",
]

[project.urls]
Homepage = "https://github.com/rioriost/agentops_mcp_server"
Issues = "https://github.com/rioriost/agentops_mcp_server/issues"
Repository = "https://github.com/rioriost/agentops_mcp_server"

[project.scripts]
agentops_mcp_server = "agentops_mcp_server.main:main"
zed-agentops-init = "agentops_mcp_server.init:main"

[project.optional-dependencies]
test = [
  "pytest>=9",
  "pytest-cov>=7",
]

[dependency-groups]
dev = [
  "build>=1.2.2",
  "twine>=6.1.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
  "release: coverage-only tests (excluded from verify)",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
